--- a/MobilePlat/res/layout/widget_setting_feedback.xml
+++ b/MobilePlat/res/layout/widget_setting_feedback.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_feedback">
 
     <EditText
-        android:id="@+id/edt_feedback_contact"
+        android:id="@+id/edt_feedback_massage"
         android:layout_width="fill_parent"
         android:layout_height="180dip"
         android:layout_marginLeft="8dip"
@@ -20,10 +20,10 @@
         android:inputType="textMultiLine" />
 
     <EditText
-        android:id="@+id/edt_feedback_massage"
+        android:id="@+id/edt_feedback_contact"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
-        android:layout_below="@id/edt_feedback_contact"
+        android:layout_below="@id/edt_feedback_massage"
         android:layout_marginLeft="8dip"
         android:layout_marginRight="8dip"
         android:layout_marginTop="15dp"
@@ -37,7 +37,7 @@
         android:id="@+id/btn_feedback"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
-        android:layout_below="@+id/edt_feedback_massage"
+        android:layout_below="@+id/edt_feedback_contact"
         android:layout_marginLeft="8dip"
         android:layout_marginRight="8dip"
         android:layout_marginTop="15dp"
