--- a/MobilePlat/res/layout/bottombar.xml
+++ b/MobilePlat/res/layout/bottombar.xml
@@ -11,19 +11,27 @@
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
-           android:background="@drawable/bottom_selected"
            android:gravity="center_horizontal"/>
       <TextView 
+          android:id="@+id/imgSelectedbg_2"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
+            android:clickable="true"
+           android:gravity="center_horizontal"
            android:layout_weight="1"/>
        <TextView 
+           android:id="@+id/imgSelectedbg_3"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
+            android:clickable="true"
+           android:gravity="center_horizontal"
            android:layout_weight="1"/>
         <TextView 
+            android:id="@+id/imgSelectedbg_4"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
+            android:clickable="true"
+           android:gravity="center_horizontal"
            android:layout_weight="1"/>
      </LinearLayout>
      
